fix: circle cursor follow overflow

--- a/sass/_utilities.sass
+++ b/sass/_utilities.sass
@@ -20,3 +20,7 @@
 @mixin responsive-sm
   @media (max-width: 950px)
     @content
+
+@mixin responsive-ssm
+  @media (max-width: 550px)
+    @content
