--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,6 +12,9 @@
   z-index: -1
   filter: blur(50px)
 
+  @include u.responsive-ssm
+    display: none
+
 
 header
   height: 100vh
